assets/css/style.css
html {
    background-image: url('../images/circles-and-roundabouts.png');
    /*putting the background image in the body selector causes the background image to not load properly in pages with form elements, such as in contact.html */
}

html, body {
    min-height: 100%;
}

body {
    display: flex;
    flex-direction: column;
    height: 100vh;
    color: #777777;
    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
}

.clearfix::after {
    content: "";
    display: block;
    clear: both;
}

/* header styling */
header {
    flex-shrink: 0;
    border-bottom: 2px solid #cccccc;
    background-color: #fff;
    width: 100%;
    position: fixed;
}

header div {
    width: 960px;
    margin: auto;
}

/* nav bar styling */
nav {
    float: right;
    padding-top: 30px;
}

nav a:hover {
    color: #474747;
}

nav a {
    text-decoration: none;
    color: #777777;
    border-right: 1px solid #e6e6e6;
    padding: 0 16px 0 10px;
}

nav a:last-child {
padding: 0 0 0 10px;
border: none;
}

/* main content styling */
.content {
    flex: 1 0 auto;
    width: 960px;
    margin: 110px auto 30px auto;
}

section {
    float: left;
    border: 2px solid #dddddd;
    background-color: #fff;
    width: 650px;
}

aside {
    float: right;
    border: 2px solid #dddddd;
    background-color: #fff;
    width: 270px;
}

aside div {
    padding-top: 22px;
}

aside div a:first-child {
    padding-right: 4px;
}

aside div a:last-child {
    padding-right: 0;
    padding-left: 3px;
}

.connect {
    padding: 30px;
}

aside a:hover,
.box a:hover {
    opacity: .7;
}

/* index.html content styling */

#about-me p {
    line-height: 2;
}

.section-content {
    padding: 40px 30px;
}

#about-me img {
    float: left;
    margin: 8px 20px 0 0;
    width: 270px;
}

#about-me h2 {
    margin-bottom: 22px;
}

/* portfolio.html content styling */

.portfolio-grid-wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 40px;
}

.portfolio-grid-wrapper img {
    max-width: 100%;
}

.box {
    position: relative;
}

.box h4 {
    position: absolute;
    bottom: 12px;
    width: 100%;
    text-align: center;
    padding: 15px 0;
}

/* contact.html content styling */

input, textarea {
    display: block;
    min-width: 100%;
    max-width: 100%;
    border: 2px solid #e6e6e6;
    margin: 8px 0 16px 0;
    padding: 8px 12px;
    box-sizing: border-box;
}

textarea {
    height: 200px;
}

form button {
    background-color: #4aaaa5;
    color: #fff;
    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
    border: none;
    padding: 10px 30px;
    font-size: 1em;
}

/* footer styling */
footer {
    flex-shrink: 0;
    /* flex-shrink: 0 forces an element (in this case, the footer) to remain full size (in this case, height), where flex shrink: 1 (or 2, or .5 or 4 or whatever) would allow the browser to shrink it to some proportion of the available space */
    clear: both;
    background-color: #666666;
    color: #fff;
    border-top: 5px solid #4aaaa5;
    text-align: center;
    font-size: .75em;
}

footer p {
    padding: 35px 0;
}

/* heading styling */
h1, h2, h3, h4 {
    font-family: Georgia, Times, 'Times New Roman', serif;
}

h1 {
    display: inline-block;
    font-size: 1.75em;
    font-weight: bold;
    color: #fff;
    background-color: #4aaaa5;
    padding: 25px 30px 25px 30px;
}

h2 {
    font-size: 1.6em;
    font-weight: bold;
    color: #4aaaa5;
    padding: 0 0 30px 0;
    margin: 0 0 30px 0;
    border-bottom: 2px solid #cccccc;
}

h3 {
    font-size: 1.4em;
    font-weight: bold;
    color: #4aaaa5;
    padding: 0 0 20px 0;
    border-bottom: 2px solid #e6e6e6;
}

h4 {
    font-size: 1.4em;
    color: #fff;
    background-color: #4aaaa5;
}

